# localization_project

./: CMakeLists.txt  README.md  package.xml
config/apriltag_ros/: settings.yaml  tags.yaml
config/localization/: ekf.yaml
launch/: launch.launch  marker2scan.launch
scripts/: grafico-modo3.py  graficos.py  ground_truth1.csv  ground_truth2.csv  ground_truth3.csv  odometry.1csv  odometry.2csv  odometry.3csv  tf_tags.py
src/: marker2pointcloud.cpp  marker2pose.cpp  marker2posestamped.cpp  marker2scan.cpp
urdf/: realsense.urdf.xacro
